style.css
html {
  scroll-behavior: smooth;
}

.homepage {
  margin : 0;
}

/* navigation bar*/

.topnav {
  overflow: hidden;
  align-items: center;
  display : flex;
  flex-direction: row;
  background-color: #4e8aca;
  justify-content: space-between;
  padding-right : 15px;
  padding-left: 10px;
  padding-top: 30px;
  padding-bottom: 30px;
  color : white;
  text-decoration: none;
  position:fixed;
  top:0px;
  z-index: 1000;
  width:100%;
  box-sizing: border-box;

}

.ewblogo {
  width: 200px;
  

}

.navLinks a {
  color : black;
  text-decoration: none;
  font-size: 25px;
  background-color: white;
  padding-right : 25px;
  padding-left: 25px;
  border-radius: 30px;
  padding-top: 7px;
  padding-bottom: 7px;
  font-family: 'Podkova', serif;
  transition: background-color 0.3s;
}

.navLinks a:hover {
  background-color: #4e8aca;
  color : white;
  cursor:pointer;
}

a.active {
  background-color: #4e8aca;
  color : white;
}

/**********************************************/
/* code for hamburger icon for smaller screens*/
.menuIcon {
  display: none;
  width: 3px;
  height: 3px;
}

.hamMenu {
  display: none;
  position:fixed;
  top:85px;
  z-index: 1000;
  width:100%;
  box-sizing: border-box;
}



.navContainer{
  display:none;
}

.bar1, .bar2, .bar3 {
    width: 25px;
    height: 3px;
    background-color: white;
    margin: 4px;
    border-radius: 10px;
  }

@media screen and (max-width: 875px) {
  .navLinks {
    display: none;
  }

  .navContainer {
   display: block;
   cursor:pointer;
   
  }
    
  .hamMenu a {
  color: white;
  padding: 14px;
  text-decoration: none;
  font-size: 22px;
  text-align: center;
  font-family: 'Podkova', serif;  
  background-color: #4e8aca;
  
}
  .hamMenu.show {
    display:flex;
    flex-direction: column;
    
  }

  .hamLink:hover {
    background-color: white;
    color : #4e8aca;
  }
}


/****************************/
/*Main Photo in the homePage*/
.home_after_navbar {
  position:relative;
  display:flex;
  align-content: center;
  margin-top: 80px;
}

.homeMainPhoto {
  display: flex;
  height: 500px;
  width: 100%; 
  object-fit: cover;
  object-position: center;
  position: relative;
  
}

.homeTitle {
  display:flex;
  align-items: center;
  position: absolute;
  color: black;
  background-color: rgb(255, 255, 255, 0.3);
  bottom: 350px;
  font-size: 25px;
  width: fit-content;
  left:50%;
  transform: translateX(-50%);
  flex-direction: column;
  font-family: Playfair Display, serif ;
  border-radius: 10px;
  padding:5px;
}

h1,h2 {
  margin:5px;
  white-space: nowrap;
  width: fit-content;
  text-transform: uppercase;
}


.homecaption {
  color: black;
  margin-top: 5px;
  margin-right:5px;
  text-align: right;
  font-family: Montserrat, serif;
  text-transform: uppercase;
  
}

/************************/
/*Homepage about us section*/

.homeHeading {
  font-family: Radley, sans-serif;
  font-size: 35px;
  margin-top: 50px;
  margin-left: 40px;
  margin-right: 40px;
  
  
}

.aboutus{
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  margin-left: 40px;
  margin-right: 40px;
}

.homeparagraph {
  width:40%;
  word-wrap: break-word;
  font-family: 'Podkova', serif;
  font-size: 20px;
 

}

.aboutgallery {
  display: grid;
  grid-template-columns: repeat(2, 250px);
  grid-template-rows: repeat(2, 250px);

}

/* image container */
.aboutimage {
  width: 200px;
  height: 200px;
  overflow: hidden;
  border-radius: 10px;
  position: relative;
  
  
}

/* actual image */
.aboutimage img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  display: block;
}

.imagecaption {
  position: absolute;
  bottom: 0;
  width: 100%;
  padding: 10px;
  background: rgba(0, 0, 0, 0.6);
  color: white;
  font-size: 18px;
  font-family: Radley, sans-serif;
  text-align: center;
}


@media screen and (max-width: 980px) {

  .aboutus {
    flex-direction: column;

  }

  .homeparagraph {
  width:100%;
  word-wrap: break-word;

  }

  .aboutgallery{
    grid-template-columns: repeat(2, 205px);
    grid-template-rows: repeat(2, 205px);
    justify-content: center;
    margin-top: 15px;

  }
}

/************************/
/*Homepage Current and Past Projects section*/

.homeproject_gallery {
  display: grid;

  grid-template-columns: repeat(2, 400px);
  gap: 20px;

  justify-content: center;

  margin-top: 50px;

  font-family: "Podkova", serif;
}

.projectImage {
  position: relative;

  width: 400px;
  height: 240px;

  overflow: hidden;
  border-radius: 12px;

  transition: 0.3s ease;
}

/* image */
.projectImage img {
  width: 100%;
  height: 100%;

  object-fit: cover;
  display: block;
  transition-duration: 0.3s;
}

/* caption overlay */
.projectCaption {
  position: absolute;
  bottom: 0;

  width: 100%;
  padding: 12px;

  background: rgba(0, 0, 0, 0.6);
  color: white;

  text-align: center;
  font-size: 18px;
}


.projectImage:hover {
  box-shadow: 0px 8px 20px rgba(0,0,0,0.35);
  transform: translateY(-10px);
  .projectDetail {
    display: block;

  }
  .projectTitle {
    font-size: 26px;
  }
  .projectParagraph {
    font-size: 18px;
  }
}

.projectDetail {
  display: none;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(255, 255, 255, 0.9);
  color: black;
  padding: 20px;
  box-sizing: border-box;
}

@media screen and (max-width: 980px) {
  .homeproject_gallery {
    grid-template-columns: repeat(1, 400px);
  }
  
}




/************************/
/*Homepage Support section*/

.supportSection {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  color: black;
  margin-left: 40px;
  margin-right: 60px;
  text-align: center;
  font-family: 'Podkova', serif; 
  font-family: Podkova;
  align-items: center;
  
}

.supportparagraph{
  width:40%;
  word-wrap: break-word;
  font-size: 20px;
  

  
}

.sponorshippackage  {
  background-color: #ede2d1;
  text-transform: uppercase;
  border-radius: 10px;
  padding: 20px;
  font-size: 20px;
  width: 40%;
  font-size: 27px;

}

.sponorshippackage:hover {
  cursor: pointer;
  box-shadow: 0px 8px 20px rgba(0,0,0,0.35);
  transform: translateX(10px);
  text-decoration: underline;
  font-weight: bold;
}



/************************/
/*Homepage Footer section*/

.wtc {
  font-family: 'League Spartan', serif;
  text-align:center;
  text-transform: uppercase;
  margin-top: 30px;
  margin-bottom:80px;
  font-weight: bold;
  align-items: center;
  font-size: 20px;
  
}


.footer {
  display: flex;
  align-items: center;
  justify-content: space-between;
  text-align: center;
  flex-wrap:wrap;
  margin-top: 100px;
  margin-bottom: 20px;
  

}
/* left and right sections */

.donation {
  
  flex: 1 1 250px;
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  
  width: 60%;
  

}

/* middle section */

.donatelink {
  flex: 1;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.customDivider {
  height: 150px;
  width: 5px;
  background-color: black;
}

.headerParagraph{
  width:200px;
}

.smallScreenDonate{
    display:none;
}

 .donateButton {
    background-color: #4e8aca;
    font-family: "Podkova";
    padding-right:20px;
    padding-left:20px;
    padding-top:10px;
    padding-bottom:10px;
    border-radius: 15px;
    
  }

.donateButton:hover {
  cursor: pointer;
  box-shadow: 0px 8px 20px rgba(0,0,0,0.35);
  transform: translateY(-10px);
  text-decoration: underline;
  font-weight: bold;
  
}

.wtctwo{
  display:none;
}

@media screen and (max-width: 1100px) {

  .donatelink{
    display:none;
  }
  .footer {
    display: flex;
    flex-direction: column;
  }

  .donation {
    margin-top: 40px;
    
  }

  .smallScreenDonate{
    display:block;
  }


  .customDividerTwo {
  height: 5px;
  width: 80%;
  background-color: black;
  
  } 

  .donateButtonTwo{
    margin-bottom:30px;
  }

  .wtctwo{
    display:block;
    font-family: 'League Spartan', serif;
    text-align:center;
    text-transform: uppercase;
    font-size:30px;
    text-decoration: underline;
    font-weight: bold;

  }


}


.eventGallery {
  display: flex;
  flex-direction: column;
  align-items: center;
  
  
}

div.polaroid {
  width: 280px;
  padding: 10px 10px 20px 10px;
  border: 1px solid #BFBFBF;
  background-color: white;
  box-shadow: 10px 10px 5px #aaaaaa;
  text-align: center;
  font-family: 'Podkova', serif;
  color: black;
}

div.rotate_right {
  float: left;
  transform: rotate(7deg);
}

div.rotate_left {
  float: left;
  transform: rotate(-8deg);
  transition:
    transform 0.3s ease,
    box-shadow 0.3s ease,
    filter 0.3s ease;
}

div.polaroid:hover {
  cursor:pointer;
  transform:scale(1.05);
  box-shadow: 0 12px 25px rgba(0, 0, 0, 0.5);
  
  .eventDetail {
    display: block;
  }
  .eventTitle {
    font-size: 26px;
  }
  .eventParagraph {
    font-size: 18px;
  }
  
}

.eventDetail {
  display: none;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(255, 255, 255, 0.9);
  color: black;
  padding: 20px;
  box-sizing: border-box;
  
}

